:art: More detailed README text